tests/ui/simd/masked-load-store-check-fail.stderr
error[E0308]: mismatched types
  --> $DIR/masked-load-store-check-fail.rs:18:13
   |
LL |         let _x: Simd<u8, 2> = simd_masked_load::<_, _, _, { SimdAlign::Element }>(
   |                               --------------------------------------------------- arguments to this function are incorrect
...
LL |             Simd::<u8, 4>([9; 4]),
   |             ^^^^^^^^^^^^^^^^^^^^^ expected `2`, found `4`
   |
   = note: expected struct `Simd<_, 2>`
              found struct `Simd<_, 4>`
help: the return type of this call is `Simd<u8, 4>` due to the type of the argument passed
  --> $DIR/masked-load-store-check-fail.rs:15:31
   |
LL |           let _x: Simd<u8, 2> = simd_masked_load::<_, _, _, { SimdAlign::Element }>(
   |  _______________________________^
LL | |             Simd::<i8, 4>([-1, 0, -1, -1]),
LL | |             arr.as_ptr(),
LL | |             Simd::<u8, 4>([9; 4]),
   | |             --------------------- this argument influences the return type of `simd_masked_load`
LL | |         );
   | |_________^
note: function defined here
  --> $SRC_DIR/core/src/intrinsics/simd.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/masked-load-store-check-fail.rs:25:13
   |
LL |         let _x: Simd<u32, 4> = simd_masked_load::<_, _, _, { SimdAlign::Element }>(
   |                                --------------------------------------------------- arguments to this function are incorrect
...
LL |             default,
   |             ^^^^^^^ expected `Simd<u32, 4>`, found `Simd<u8, 4>`
   |
   = note: expected struct `Simd<u32, _>`
              found struct `Simd<u8, _>`
help: the return type of this call is `Simd<u8, 4>` due to the type of the argument passed
  --> $DIR/masked-load-store-check-fail.rs:22:32
   |
LL |           let _x: Simd<u32, 4> = simd_masked_load::<_, _, _, { SimdAlign::Element }>(
   |  ________________________________^
LL | |             Simd::<u8, 4>([1, 0, 1, 1]),
LL | |             arr.as_ptr(),
LL | |             default,
   | |             ------- this argument influences the return type of `simd_masked_load`
LL | |         );
   | |_________^
note: function defined here
  --> $SRC_DIR/core/src/intrinsics/simd.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
